@@ -235,6 +235,11 @@
 #q
 #quiet
 
+# login_disabled:
+# Do not allow users to log in.
+# Add LOGINDISABLED to capability list in IMAP4 and IMAP4S mode.
+#login_disabled
+
 # lower_case state[,state...]:
 # Convert usernames to lower case according the the locale in given state(s).
 # State may be one of servername_lookup, local_authentication, remote_login
